tests/paczka1/fuzzy1/57309905.err
Error in line 17: S23 A220 4,9
Error in line 13: oJxxmLlUW S23 40,9
Error in line 27: bfNtg2 A648 63,88
Error in line 36: bfNtg2 A648 123,8
